@@ -1,4 +1,7 @@
 
+2007-08-08  Roland Clobus <rclobus@bigfoot.com>
+	* getVersions.sh: Updated for SF
+	
 2007-08-05  Roland Clobus <rclobus@bigfoot.com>
 	* configure.ac: Work version is 0.11.3
 	* docs/README.release: updated svn branch command.
